# freesound-rack

./: CMakeLists.txt  README.md
Builds/MacOSX/FreesoundAPI-Demo.xcodeproj/: project.pbxproj
CMake/: Findjuce.cmake
FreesoundAPI/: FreesoundAPI.cpp  FreesoundAPI.h
Plugins/: CMakeLists.txt
Plugins/FreesoundAdvancedSampler/: CMakeLists.txt  README.md
Plugins/FreesoundAdvancedSampler/Source/: AudioDownloadManager.cpp  AudioDownloadManager.h  BadgeSVGs.h  BookmarkManager.cpp  BookmarkManager.h  BookmarkViewerComponent.cpp  BookmarkViewerComponent.h  CustomAlertWindowLookAndFeel.h  CustomButtonStyle.h  CustomLookAndFeel.h  ExpandablePanel.cpp  ExpandablePanel.h  ExpandablePanelComponent.cpp  ExpandablePanelComponent.h  FreesoundSearchComponent.h  FreesoundSearchUtils.h  HtmlAlertWindow.h  MasterSearchPanel.cpp  MasterSearchPanel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetBrowserComponent.cpp  PresetBrowserComponent.h  PresetManager.cpp  PresetManager.h  SampleCollectionManager.cpp  SampleCollectionManager.h  SampleGridComponent.cpp  SampleGridComponent.h  TrackingSamplerVoice.cpp  TrackingSamplerVoice.h
Plugins/FreesoundAdvancedSampler/Source/Archive/: FreesoundSearchComponent.cpp
Plugins/FreesoundRack/: CMakeLists.txt
Plugins/FreesoundRack/Source/: AudioDownloadManager.cpp  AudioDownloadManager.h  BookmarkViewerComponent.h  CustomButtonStyle.h  MasterSearchPanel.cpp  PluginEditor.cpp  PluginProcessor.cpp  PresetBrowserComponent.cpp  SampleCollectionManager.cpp  TrackingSamplerVoice.cpp
Plugins/FreesoundSimpleSampler/: CMakeLists.txt
Plugins/FreesoundSimpleSampler/Source/: AudioDownloadManager.cpp  AudioDownloadManager.h  FreesoundSearchComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/FreesoundUploader/: CMakelists.txt
Plugins/FreesoundUploader/Source/: BinaryData.cpp  BinaryData.h  PluginEditor.h  PluginProcessor.h
